[gd_scene load_steps=5 format=3 uid="uid://bjl0lgkoqrigy"]

[ext_resource type="Script" uid="uid://cg1yusov0cuaf" path="res://Scripts/player_controller.gd" id="1_qus2v"]
[ext_resource type="Texture2D" uid="uid://1ndhyix2rklb" path="res://Assets/Sprites/Player Sprites/FrogSprite1.png" id="2_qus2v"]

[sub_resource type="SpriteFrames" id="SpriteFrames_67v81"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qus2v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_or1cs"]
radius = 29.0172

[node name="Frog" type="CharacterBody2D"]
z_index = 10
collision_mask = 12
script = ExtResource("1_qus2v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_67v81")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_or1cs")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_or1cs")

[connection signal="timeout" from="ShootTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
